Fixed about me paragraph and maybe fixed scrolling on mobile...will see...

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,13 @@
+@import "./Global";
+
 * {
   //font-family: 'Inter', sans-serif;
   overflow: hidden;
+
+  @include mobile {
+    scroll-behavior: smooth;
+
+  }
 }
 
 .app {
