--- a/src/components/aboutme/AboutMe.scss
+++ b/src/components/aboutme/AboutMe.scss
@@ -15,7 +15,6 @@
     overflow: hidden;
     margin-top: 30px;
 
-
     .imgContainer {
       width: 600px;
       height: 600px;
@@ -79,6 +78,7 @@
 
           @include mobile {
             font-size: 20px;
+            padding-top: 5px;
 
           }
         }
@@ -93,9 +93,10 @@
           word-wrap: break-word;
 
           @include mobile {
-            font-size: 15px;
+            font-size: 11.5px;
             max-width: 50%;
             max-height: 100%;
+            padding-top: 20px;
 
           }
 
